--- a/source/_posts/人民币或日元符号-¥-，还有半角全角之分.md
+++ b/source/_posts/人民币或日元符号-¥-，还有半角全角之分.md
@@ -2,11 +2,14 @@
 title: 人民币或日元符号'¥'，还有半角全角之分
 date: 2019-01-07 21:06:04
 tags:
+- 奇怪的知识
 ---
 
 ## 半角字符与全角字符
 
 是计算机中，中、日、韩文的CJKV字符的显示格式。
+
+<!-- more -->
 
 传统上，英语或拉丁字母语言使用的计算机系统，每一个字母或符号，都是使用一字节的空间（一字节由8比特组成，共256个编码空间）来储存；而汉语、日语及韩语文字，由于数量大大超过256个，故惯常使用两字节来储存一个字符。在使用等宽字体（如DOS、部分文字编辑器等）的环境下，中日韩文字此时占据两倍于西文字符的显示宽度。所以，中、日、韩等文字称为全角字符，相比起来，拉丁字母或数字就称为半角字符。有时为了使字体看起来齐整，英文字母、数字及其他符号也由原来只占一个字空间，改为占用两个字的空间显示、使用两个字节储存的格式。
 
