--- a/source/_posts/小程序-小程序持续集成与部署.md
+++ b/source/_posts/小程序-小程序持续集成与部署.md
@@ -2,6 +2,7 @@
 title: 小程序 | 小程序持续集成与部署
 date: 2018-04-01 20:42:21
 tags:
+- 小程序
 ---
 
 ### 为什么需要进行小程序持续化集成与部署
@@ -9,6 +10,8 @@ tags:
 小程序开发有别于web开发，我们开发好的代码，需要通过小程序开发工具上传到腾讯的服务器。预览我们开发好的小程序，也需要通过小程序开发者工具进行构建。
 如果是一个人开发，这种通过在开发者本机并经过小程序开发者工具构建上传的方式不会有什么问题，但是，一旦同一个小程序开发的人员多了，就很容易因为开发环境不一致而出现种种问题。
 而通过持续化集成，提供统一的构建环境，则可以避免这一问题。
+
+<!-- more -->
 
 ### 实现原理
 
