--- a/source/_posts/小程序-巧妙获取线上版本.md
+++ b/source/_posts/小程序-巧妙获取线上版本.md
@@ -2,10 +2,13 @@
 title: 小程序 | 巧妙获取线上版本
 date: 2018-11-29 21:02:55
 tags:
+- 小程序
 ---
 
 作为小程序第三方服务商，同一个小程序，可能会在线上存在不同的版本。
 有时候，如果页面UI没有进行调整的情况下，我们就没法知道当前小程序究竟是哪一个版本。
+
+<!-- more -->
 
 先前想到了两个解决方案:
 
